<resources>
    <string name="app_name">Time To Math!</string>
    <string name="name"> Time To Math!</string>
    <string name="discription_main"> Welcome! </string>
    <string name="start">Start new game</string>
    <string name="theory">Read the theoretical material</string>
    <string name="help">Need help?</string>
    <string name="mode">Mode:</string>
    <string name="integer_numbers">Integer Numbers</string>
    <string name="decimal_fractions">Decimal Fractions</string>
    <string name="common_Fractions">Common Fractions</string>
    <string name="SI">Converting Numbers From One Number System To Another</string>
    <string name="theory_app">Information:</string>
    <string name="test">Test test test</string>
    <string name="settings">Settings</string>
    <string name="language">Change language</string>
    <string name="chooseStyle">Choose theme:</string>
    <string name="t1">Theme Green</string>
    <string name="t2">Theme Orange</string>
    <string name="style">Change style</string>
    <string name="chooseLanguage">Choose language:</string>
    <string name="theory_main">Read the theory for:</string>
    <string name="put">Put your answer here</string>
    <string name="finish">Finish!</string>

    <string name="instruction">
        \n
        To start to the decision of the test, you need to click on <b>“Start new game”</b> and choose the necessary rate.\n
        \n
Then click on <b>“Read the theoretical material”</b>, if you need to or just skip it and start new test.\n
        \n
The test consists of 10 tasks of varying complexity (Numerical examples are generated by the program in a random way by the set rules). Answers need to be entered into the entry field specially allotted for this purpose. ATTENTION! At introduction of decimal fractions, use ONLY a point. Introduction of foreign punctuation marks, letters and gaps is inadmissible.\n
        \n
On completion of work click <b>"complete the test"</b>. After that the application will provide you the report on the solved work, will indicate errors and will display the correct answers. The block with information on this material will be also available to you.\n
        \n
Then you will be able to return to the main menu or to pass a test anew.\n
        \n
<b>NOTE!</b> During the work with common fractions two entry fields will be available to you (to numerator and to a denominator respectively). The quantity of tasks for this mode will be reduced up to 5.\n
        \n
<b>Have a good time!</b></string>
</resources>
